--- a/src/index.css
+++ b/src/index.css
@@ -336,13 +336,11 @@ p span {
   height: 100%;
 }
 .single-question {
-  /* width: 40%;
-  min-width: 61rem; */
   background-color: #fff1e2;
-  padding: 5rem 5rem;
+  padding: 5rem 2rem;
   border-radius: 5rem;
   margin: 2rem 2rem;
-  margin: 0 3rem;
+  margin: 0 2rem;
 }
 .question-number {
   background-color: #63cdf6;
@@ -359,10 +357,10 @@ p span {
   margin-top: 5rem;
 }
 .answer-item {
-  width: 38%;
+  width: 41%;
   text-align: right;
   padding: 0.63rem 0;
-  font-size: 2.6rem;
+  font-size: 1.9rem;
   font-weight: 400;
   cursor: pointer;
 }
@@ -598,16 +596,38 @@ input[type="range"]:focus-visible {
 
 @media screen and (max-width: 640px) {
   .single-question {
-    padding: 5rem 3rem;
+    padding: 5rem 1rem;
     margin: 0 0 4rem 0;
   }
+  .answer-item {
+    width: 43%;
+    font-size: 1.7rem;
 }
-@media screen and (max-width: 450px){
-  html{
+  .range-input-box{
+    top: 0;
+  }
+  .vertical-slider::-webkit-slider-thumb {
+    width: 3rem;
+    height: 6rem;
+    margin-top: -2.5rem;
+  }
+  .vertical-slider::-moz-range-thumb{
+    width: 3rem;
+    height: 6rem;
+    margin-top: -2.5rem;
+  }
+  .vertical-slider::-ms-thumb {
+    width: 3rem;
+    height: 6rem;
+    margin-top: -2.5rem;
+  }
+}
+@media screen and (max-width: 450px) {
+  html {
     font-size: 1.6vw;
   }
   .hp-label-box,
-  .hp-intro-right{
+  .hp-intro-right {
     width: 100%;
     min-width: none;
   }
