--- a/src/index.css
+++ b/src/index.css
@@ -301,12 +301,12 @@ p span {
   padding-bottom: 10rem;
 }
 .question-wrapper {
-  width: 95%;
+  width: 90%;
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  
+  max-width: 1720px;
 }
 
 /* width */
