--- a/src/index.css
+++ b/src/index.css
@@ -676,6 +676,9 @@ input[type="range"]:focus-visible {
     z-index: 10;
     transition: all 0.5s ease;
   }
+  .empty-scrolled{
+    min-height: 400px;
+  }
   @keyframes smoothScroll {
     0% {
       transform: translateY(-7rem);
