--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,9 @@
   .print-box *{
     font-family: "Noteworthy";
   }
+  .print-box .btn-box{
+    display: none;
+  }
 }
 * {
   margin: 0;
@@ -219,6 +222,7 @@ p span {
   background-color: #000;
   color: #fff;
 }
+
 .circle-center-text {
   border-radius: 50%;
   display: flex;
@@ -268,9 +272,9 @@ p span {
   background-color: #fff1e2;
   border: 0.5rem solid #FF9027;
   border-radius: 2.5rem;
-  padding: 2rem 2rem;
-  width: 48rem;
-  min-height: 21rem;
+  padding: 3rem 2rem;
+  width: 55rem;
+  min-height: 25rem;
 }
 .hp-label-box h3{
   margin-bottom: 2rem;
@@ -282,14 +286,43 @@ p span {
 .print-label-box{
   padding-top: 2rem;
 }
-.print-label-box > div{
+.hp-label-box .btn-box > div{
   width: 50%;
   text-align: center;
+  margin-top: 2rem;
+  padding: 0 2rem;
 }
-.print-label-box  p{
-  font-weight: 600;
+.hp-label-box .btn-box .btn{
+  width: 16rem;
+  height: 4.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  font-size: 1.5rem;
+  position: relative;
+  margin: 0 auto;
+}
+.btn .btn-icon{
+  position: absolute;
+  top: 50%;
+  left: 2rem;
+  transform: translateY(-50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: max-content;
+}
+.btn .btn-icon img{
+  width: 100%;
+  max-width: 2rem;
+  max-height: 2rem;
+  object-fit: contain;
+}
+.hp-label-box .btn-box  p{
+  font-weight: 400;
   margin-top: 1rem;
-  font-family: "Noteworthy";
+  font-size: 1.4rem;
 }
 .print-label-box .btn{
   width: 85%;
