--- a/src/index.css
+++ b/src/index.css
@@ -271,43 +271,37 @@ p span {
 
 .hp-label-box {
   background-color: #fff1e2;
-  border: 0.5rem solid #ff9027;
+  border: 1px solid #f15a29;
   border-radius: 2.5rem;
   padding: 3rem 2rem;
-  width: 55rem;
-  min-height: 25rem;
+  width: 52rem;
+  min-height: 26rem;
 }
 .hp-label-box h3 {
   margin-bottom: 2rem;
   font-weight: 300;
-  color: #ff9027;
+  color: #f15a29;
   font-family: "Noteworthy";
-  font-size: 4rem;
+  font-size: 4.8rem;
 }
 .print-label-box {
   padding-top: 2rem;
 }
-.hp-label-box .btn-box > div {
+.hp-intro-right .btn-box > div {
   width: 50%;
   text-align: center;
   margin-top: 2rem;
   padding: 0 2rem;
 }
-.hp-label-box .btn-box .btn {
-  width: 16rem;
-  height: 4.5rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 0;
-  font-size: 1.5rem;
+.hp-intro-right .btn-box .btn {
   position: relative;
   margin: 0 auto;
+  width: 100%;
 }
 .btn .btn-icon {
   position: absolute;
   top: 50%;
-  left: 2rem;
+  left: 3rem;
   transform: translateY(-50%);
   display: flex;
   justify-content: center;
@@ -316,14 +310,15 @@ p span {
 }
 .btn .btn-icon img {
   width: 100%;
-  max-width: 2rem;
-  max-height: 2rem;
+  max-width: 2.3rem;
+  max-height: 2.3rem;
   object-fit: contain;
 }
-.hp-label-box .btn-box p {
+.hp-intro-right .btn-box p {
   font-weight: 400;
   margin-top: 1rem;
-  font-size: 1.4rem;
+  font-size: 1.6rem;
+  font-family: "MyriadPro";
 }
 .print-label-box .btn {
   width: 85%;
@@ -370,10 +365,11 @@ p span {
   height: auto;
 }
 .label-text span {
-  font-size: 6.5rem;
-  font-family: "Noteworthy";
+  font-size: 10rem;
+  font-family: "MyriadPro";
   font-weight: 700;
   margin: 0 5px;
+  line-height: 0.8;
 }
 .question-section {
   padding-bottom: 10rem;
