--- a/src/index.css
+++ b/src/index.css
@@ -252,7 +252,8 @@ p span {
   padding: 12rem 0;
 }
 .hp-intro-left {
-  width: 58%;
+  flex: 1;
+  padding-right: 9rem;
 }
 .hp-intro-left h1 {
   font-weight: normal;
@@ -271,18 +272,18 @@ p span {
 
 .hp-label-box {
   background-color: #fff1e2;
-  border: 1px solid #f15a29;
-  border-radius: 2.5rem;
-  padding: 3rem 2rem;
+  border: 7px solid #f15a29;
+  border-radius: 4rem;
+  padding: 2rem 2rem;
   width: 52rem;
   min-height: 26rem;
 }
 .hp-label-box h3 {
   margin-bottom: 2rem;
-  font-weight: 300;
+  font-weight: 600;
   color: #f15a29;
   font-family: "Noteworthy";
-  font-size: 4.8rem;
+  font-size: 6.5rem;
 }
 .print-label-box {
   padding-top: 2rem;
@@ -315,9 +316,9 @@ p span {
   object-fit: contain;
 }
 .hp-intro-right .btn-box p {
-  font-weight: 400;
+  font-weight: 600;
   margin-top: 1rem;
-  font-size: 1.6rem;
+  font-size: 2rem;
   font-family: "MyriadPro";
 }
 .print-label-box .btn {
@@ -365,11 +366,12 @@ p span {
   height: auto;
 }
 .label-text span {
-  font-size: 10rem;
+  font-size: 12rem;
   font-family: "MyriadPro";
-  font-weight: 400;
+  font-weight: 600;
   margin: 0 5px;
   line-height: 0.8;
+  text-transform: lowercase;
 }
 .question-section {
   padding-bottom: 10rem;
@@ -695,6 +697,7 @@ input[type="range"]:focus-visible {
   .hp-intro-left {
     width: 100%;
     margin-bottom: 7rem;
+    padding-right: 0;
   }
   .question-wrapper {
     width: 100%;
